<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/filters"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_filters"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/selectCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_category"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toBottomOf="@id/filters"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textColor="@color/orange"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toBottomOf="@id/filters"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/choise"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/selectCategory">

            <LinearLayout
                style="@style/card_view"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/orange"
                    app:cardCornerRadius="50dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_phone_image"
                        android:contentDescription="@string/phones" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvCard1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/phones"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </LinearLayout>


            <LinearLayout
                style="@style/card_view"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="50dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_computer_image"
                        android:contentDescription="@string/computer" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvCard2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/computer"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                style="@style/card_view"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="50dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_health_image"
                        android:contentDescription="@string/health" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvCard3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/books"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                style="@style/card_view"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="50dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_books_image"
                        android:contentDescription="@string/books" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvCard4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/books"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/choise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="7dp"
                android:background="@drawable/edit_text_search_background"
                android:inputType="text"
                android:hint="@string/search"
                android:elevation="1dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="8"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_gravity="center"
                app:cardCornerRadius="50dp"
                app:cardBackgroundColor="@color/orange"/>

        </LinearLayout>

        <TextView
            android:id="@+id/hotSales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hot_sales"
            android:textStyle="bold"
            android:textSize="23sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toBottomOf="@id/search"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_more"
            android:textColor="@color/orange"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toBottomOf="@id/search"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerHotSales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/hotSales"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/bestSeller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best_seller"
            android:textStyle="bold"
            android:textSize="23sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toBottomOf="@id/recyclerHotSales"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_more"
            android:textColor="@color/orange"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toBottomOf="@id/recyclerHotSales"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerBestSeller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            app:layout_constraintTop_toBottomOf="@id/bestSeller"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/bottomNav"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerBestSeller"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/circle"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="35dp"
                    android:layout_marginStart="50dp"/>

                <TextView
                    android:id="@+id/explorer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/explorer"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toEndOf="@id/circle"
                    app:layout_constraintTop_toTopOf="@id/circle"
                    app:layout_constraintBottom_toBottomOf="@id/circle"/>

                <ImageView
                    android:id="@+id/bag"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_bag"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="15dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/explorer"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:id="@+id/heart"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_heart_b"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/user"
                    app:layout_constraintStart_toStartOf="@id/bag"/>

                <ImageView
                    android:id="@+id/user"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_user"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>